--- a/README
+++ b/README
@@ -1,2 +1,11 @@
 Class diagram:
 https://www.mermaidchart.com/app/projects/fd8e78eb-3da9-40ab-a76d-e27301662056/diagrams/edbe31ba-6749-4f5f-a6d7-b5d2a8764cef/version/v0.1/edit
+
+Sequence diagram:
+
+Use Case: HDB Officer Apply for BTO
+https://www.mermaidchart.com/app/projects/fd8e78eb-3da9-40ab-a76d-e27301662056/diagrams/b34e21be-89e5-44e8-a959-5e9832bceeb9/version/v0.1/edit
+
+Use Case: HDB Officer Register to handle a Project
+https://www.mermaidchart.com/app/projects/fd8e78eb-3da9-40ab-a76d-e27301662056/diagrams/da53ae3d-5f38-4a88-a106-b9de6433c4c5/version/v0.1/edit
+
